--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/RowSpanDropDownMenu.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/RowSpanDropDownMenu.cshtml
@@ -1,10 +1,10 @@
 ﻿
 <div class="hide dashboard-item-row-span-dropdown-menu">
 
-    <h4>
-        <span class="row-span-header"> Gewünschte Widget Größe:</span>
+    <div class="row-span-header">
+        <span class="row-span-header-text"> Gewünschte Widget Größe:</span>
         <a class="row-span-cancel" href="#"><span class="sDashboard-icon sDashboard-remove-icon"></span></a>
-    </h4>
+    </div>
     
     @for (var row = 1; row <= 3; row++)
     {
