--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
@@ -347,36 +347,39 @@ a.dashboard-toolbar-item img.dashboard-item-settings {
 }
 
 .dashboard-widget-hint {
-     font-size: 1.0em;
-     padding: 5px !important;
-     text-align: center;
-     display: inline;
-     float: right;
-     position: relative;
-     left: 0;
-     top: 0;
-     z-index: 99999;
-     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.25);
+    z-index: 9999;
+    font-size: 1.0em;
+    padding: 5px !important;
+    text-align: center;
+    display: inline;
+    float: right;
+    position: relative;
+    left: 0;
+    top: 0;
+    z-index: 99999;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.25);
 }
+
 .dashboard-item-row-span-dropdown-menu {
-     float: right;
      display: inline-block;
      margin: 0 40px 30px 0;
-     padding: 5px;
+     padding: 5px 5px 5px 70px;
      background-color: ivory;
  }
-.dashboard-item-row-span-dropdown-menu h4 {
-     display: block;
-     text-align: right;
-     padding: 0 5px 0 0;
-     margin: 0;
- }
 .dashboard-item-row-span-dropdown-menu .row-span-header {
+    width: 310px;
+    display: block;
+    text-align: right;
+    padding: 0 5px 0 0;
+    margin: 0;
+ }
+.dashboard-item-row-span-dropdown-menu .row-span-header-text {
     margin: 0 50px 10px 0;
     font-weight: bold;
 }
 .dashboard-item-row-span-dropdown-menu .row-span-cancel {
-     float: right;
+    float: right;
+    vertical-align: top;
  }
 .dashboard-item-row-span-dropdown-menu .row-span-item {
     margin: 0 30px 0 0;
