--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -542,6 +542,37 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
 }
 
 
+/* <2-zeilig> */
+.ms-container {
+    width: 760px;
+}
+.ms-container .ms-list {
+    height: 80px;
+}
+.ms-container ul.ms-list li {
+    float: left;
+    margin-right: 20px;
+}
+.ms-container .ms-selectable, .ms-container .ms-selection{
+  background: #fff;
+  color: #555555;
+  float: left;
+  width: 100%;
+}
+.ms-container .ms-selectable{
+  margin-right: 0;
+}
+.ms-container .ms-selection ul.ms-list li span{
+    width: 265px;
+}
+.dienstleistungen-header.dienstleistungen-selected {
+    margin-top: 15px;
+}
+/* </2-zeilig> */
+
+
+
+
 .breadcrumbs a{
       min-height: 22px;
 }
