--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -51,6 +51,11 @@
         try { FormWizardInitPrivate(); } catch (e) { }
         try { MultiSelectPreparePrivate(); } catch (e) { }
         ShoppingCartMenuRefreshCount();
+
+        // TEST
+        setTimeout(function () {
+            $(".button-next").trigger("click");
+        }, 100);
     };
 
     function FormPreparePrivateAjax() {
