Überarbeitung Dokumentencenter Zulassung / ZI-Pool (work in progress)

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Suche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Suche.cshtml
@@ -1,21 +1,19 @@
 ﻿@using CkgDomainLogic.Autohaus.Models
 @model FormulareSelektor
 
-@{
-    var zulassungskreiseList = (List<Zulassungskreis>)ViewData["ZulassungskreiseList"];
-    zulassungskreiseList = zulassungskreiseList.ToListOrEmptyList().CopyAndInsertAtTop(new Zulassungskreis { KreisKz = "", KreisBez = Localize.DropdownDefaultOptionPleaseChoose });
-}
-
 <div id="divFormulareSuche">
-    @using (Ajax.BeginForm("LoadFormulare", "Formulare", null,
-        new MvcAjaxOptions("divFormulareSuche") { OnComplete = "ShowFormulare();" }, new { id = "FormulareForm" }))
+    @using (Ajax.BeginForm("LoadFormulareAndZiPoolDaten", "Formulare", null,
+        new MvcAjaxOptions("divFormulareSuche") { OnComplete = "ShowFormulareAndZiPoolDaten();" }, new { id = "FormulareForm" }))
     {    
         <div class="form-horizontal" id="searchForm">
             
             @Html.FormValidationSummary()
 
 
-            @Html.FormDropDownListFor(m => m.Zulassungskreis, zulassungskreiseList.ToSelectList(), new { @class = "m-wrap" })
+            @Html.FormTextBoxFor(m => m.Postleitzahl, new { @class = "m-wrap small", col = "left", @onchange = "return TryLoadKreisByPlz();" })
+            @Html.FormDropDownListFor(m => m.Zulassungskreis, FormulareSelektor.Zulassungskreise.ToSelectList(), new { @class = "m-wrap", col = "right" })
+
+@Html.FormCheckBoxFor(m => m.IsSelected)
 
 
             @Html.FormRequiredFieldsSummary()
@@ -30,29 +28,3 @@
         </script>
     }
 </div>
-
-
-<script type="text/javascript">
-
-    function ShowFormulare() {
-        
-        FormPreparePrivateAjax();
-
-        $.ajax({
-            type: "POST",
-            url: "ShowFormulare",
-            loadingShow: true,
-            success: function (result) {
-
-                SearchResultsTryHide();
-
-                if (_modelStateValid) {
-                    ShowFormulareSearchResult(result);
-                }
-
-                LoadingHide();
-            }
-        });
-    }
-
-</script>
