--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
@@ -1,16 +1,18 @@
-﻿@using CkgDomainLogic.Autohaus.ViewModels
-@model FormulareViewModel
+﻿@model CkgDomainLogic.Autohaus.ViewModels.FormulareViewModel
 
-<h3 class="page-title" id="headerTitle">@Localize.Autohaus_Formulare <small></small></h3>
+<script type="text/javascript" src="~/assets/plugins/select2/select2.min.js"></script>
+<link rel="stylesheet" type="text/css" href="~/assets/plugins/select2/select2_metro.css" />
+
+<h3 class="page-title" id="headerTitle">@Localize.Autohaus_InfocenterZulassung <small></small></h3>
 
 @using (Html.FormSearchBox())
 {
-    @Html.Partial("Partial/Suche", Model.Selektor, new ViewDataDictionary{{ "ZulassungskreiseList", Model.Zulassungskreise }})
+    @Html.Partial("Partial/Suche", Model.FormulareSelektor)
 }
 
 @using (Html.FormSearchResultsGrid())
 {
-    <div id="divGrid"></div>
+    <div id="divResult"></div>
 }
 
 <script type="text/javascript">
@@ -18,34 +20,62 @@
     var _modelStateValid = 'false';
 
     function FormPreparePrivate() {
+        InitDropDownLists();
     }
 
     function FormPreparePrivateAjax() {
         FormPrepareAjax();
+        InitDropDownLists();
+    }
+
+    function InitDropDownLists() {
+
+        setTimeout(function () {
+            $("#Zulassungskreis").select2({
+                allowClear: true
+            });
+        }, 100);
+    }
+
+    function TryLoadKreisByPlz() {
+        $.ajax({
+            type: "POST",
+            url: "LoadKreisByPlz",
+            data: { plz: $("#Postleitzahl").val() },
+            loadingShow: false,
+            success: function (result) {
+                if (result.success) {
+                    $("#Zulassungskreis").select2("val", result.kreis);
+                }
+            }
+        });
+    }
+
+    function ShowFormulareAndZiPoolDaten() {
+        FormPreparePrivateAjax();
+
+        $.ajax({
+            type: "POST",
+            url: "ShowFormulareAndZiPoolDaten",
+            loadingShow: true,
+            success: function (result) {
+
+                SearchResultsTryHide();
+
+                if (_modelStateValid) {
+                    ShowFormulareSearchResult(result);
+                }
+
+                LoadingHide();
+            }
+        });
     }
 
     function ShowFormulareSearchResult(result) {
         SearchFormHide();
-        $("#divGrid").html(result);
-
-        // move our grid filter form into grid's toolbar:
-        GridAllColumnFilterApplyToGrid("GridFormulare");
-
-        $("#divGrid").slideDown();
+        $("#divResult").html(result);
+        $("#divResult").slideDown();
+        FormPreparePrivateAjax();
     }
 
-    function OnDataBound_GridFormulare() {
-        FilteredData_Grid_OnDataBound($(this));
-        jQuery('.tooltips').tooltip();
-        LoadingHide();
-    }
-
-    function OnColumnShowHide_GridFormulare() {
-        FilteredData_Grid_OnColumnShowHide($(this));
-    }
-
-    function OnColumnReorder_GridFormulare() {
-        FilteredData_Grid_OnColumnReorder($(this));
-    }
-    
 </script>
