--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1419,3 +1419,11 @@ div.span-alert-placeholder .alert {
 .report-generator-wrapper li.persistable-form-dropdown-menu span.li-button span {
     display: inline-block;
 }
+
+.width-100-percent {
+    width: 100%;
+}
+
+.height-100-percent {
+    height: 100%;
+}
