--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
@@ -76,6 +76,13 @@
         $("#divResult").html(result);
         $("#divResult").slideDown();
         FormPreparePrivateAjax();
+        setTimeout(function () { ResizeTilesContainer(); }, 500);
     }
+
+    function ResizeTilesContainer() {
+        var newHeight = Math.max(140 , $('.ZiPoolInfo').closest('.portlet-body').height());
+        $('.tiles').closest('.portlet-body').css('height', newHeight);
+    }
+
 
 </script>
