--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/FormulareInfoArea.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/FormulareInfoArea.cshtml
@@ -1,8 +1,10 @@
 ﻿@model List<CkgDomainLogic.Autohaus.Models.PdfFormular>
 
 <div class="tiles">
+    
     @foreach (var item in Model)
     {
-        @Html.TileSimple(item.Typ, "bg-red", "pdf", "PdfDocumentDownload?docName=" + item.DateiPfad)
+        @Html.TileSimple(item.Typ, "bg-red", "pdf", "console.log('clickkkkkkk');")
     }
+
 </div>
