--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -274,6 +274,18 @@ textarea[readonly].m-wrap {
 .label-width-120 .controls {
     margin-left: 130px !Important;
 }
+.label-width-130 .control-label {
+    width: 130px !Important;
+}
+.label-width-130 .controls {
+    margin-left: 140px !Important;
+}
+.label-width-140 .control-label {
+    width: 140px !Important;
+}
+.label-width-140 .controls {
+    margin-left: 150px !Important;
+}
 .label-width-150 .control-label {
     width: 150px !Important;
 }
@@ -1420,10 +1432,6 @@ div.span-alert-placeholder .alert {
     display: inline-block;
 }
 
-.width-100-percent {
-    width: 100%;
-}
-
-.height-100-percent {
-    height: 100%;
+div.tile-object {
+    font-size: 14px;
 }
