Dokumenten- bzw. Infocenter Zulassung: Dokumenten-Download optisch geändert (Kacheln statt Grid), ZI-Pool-Informationen hinzugefügt

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Index.cshtml
@@ -80,9 +80,12 @@
     }
 
     function ResizeTilesContainer() {
-        var newHeight = Math.max(140 , $('.ZiPoolInfo').closest('.portlet-body').height());
-        $('.tiles').closest('.portlet-body').css('height', newHeight);
+        var newHeight = Math.max(140 , $('#ZiPoolInfo').closest('.portlet-body').height());
+        $('#FormulareArea').closest('.portlet-body').css('height', newHeight);
     }
 
+    function ShowPdfFormular(docName) {
+        window.location.href = "PdfDocumentDownload?docName=" + docName;
+    }
 
 </script>
