--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Uebersicht.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Formulare/Partial/Uebersicht.cshtml
@@ -21,6 +21,8 @@
             {
                 @Html.Partial("Partial/ZiPoolFilter", Model.ZiPoolSelektor)
 
+                <div class="space10"></div>
+
                 @Html.Partial("Partial/ZiPoolInfoListe", Model.ZiPoolDetails)
             }
 
