--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
@@ -10,7 +10,7 @@
 <link href="~/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/plugins/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="~/assets/plugins/bootstrap-fileupload/bootstrap-fileupload.css" />
-<link href="~/assets/plugins/font-awesome/css/font-awesome.min.css?v=20150824" rel="stylesheet" type="text/css"/>
+<link href="~/assets/plugins/font-awesome/css/font-awesome.css?v=20160120" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style-metro.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style.css?v=20150901_1334" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
@@ -25,6 +25,7 @@
 <link href="~/assets/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="~/assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="~/assets/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" media="screen"/>
 <link rel="stylesheet" type="text/css" href="~/assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.css"/>
 
 <link href="~/content/jquery.readableXML.css?v=20150126" rel="stylesheet" type="text/css" media="screen"/>
