fine tuning new "two row" multi select mode

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/OptionenDienstleistungenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/OptionenDienstleistungenForm.cshtml
@@ -90,17 +90,25 @@
             MultiSelectPreparePrivate();
 
             function MultiSelectPreparePrivate() {
+
+                // 2-zeilig
+                var twoRowMode = true;
+
                 $('#pre-selected-options').multiSelect();
 
-                /* <2-zeilig> */
-                var headerSpanToMove = $(".dienstleistungen-header span.header-right");
-                var clone = headerSpanToMove.clone();
-                headerSpanToMove.hide();
-                $(".ms-container .ms-selection").prepend($("<div></div>").addClass("dienstleistungen-header").addClass("dienstleistungen-selected").html(clone));
-                /* </2-zeilig> */
+                if (twoRowMode) {
+                    var headerSpanToMove = $(".dienstleistungen-header span.header-right");
+                    var clone = headerSpanToMove.clone();
+                    headerSpanToMove.hide();
+                    $(".ms-container .ms-selection").prepend($("<div></div>").addClass("dienstleistungen-header").addClass("dienstleistungen-selected").html(clone));
+                }
 
                 $('#ms-pre-selected-options > .ms-selectable > .ms-list > li').each(function () {
-                    $(this).append('<i class="icon-chevron-right"></i>');
+                    if (twoRowMode) {
+                        $(this).prepend('<span class="dienstleistung-nicht-gewaehlt-checkbox">&nbsp;</span>');
+                    }
+                    else
+                        $(this).append('<i class="icon-chevron-right"></i>');
                 });
                 $('#ms-pre-selected-options > .ms-selection > .ms-list > li').each(function () {
                     $(this).prepend('<i class="icon-ok dienstleistung-gewaehlt"></i>');
