--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/ScriptsDeviation.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/ScriptsDeviation.cshtml
@@ -1,5 +1,7 @@
 <script type="text/javascript">
 
+    _multiSelectTwoRowMode = true;
+
     function HandleResponsiveControlWidthsForTheme() {
 
         HandleResponsiveBodyContainerForTheme();
