--- a/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Forms/DienstleistungsAuswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Forms/DienstleistungsAuswahl.cshtml
@@ -40,8 +40,18 @@
             function MultiSelectPreparePrivate() {
                 $('#pre-selected-options-@Model.UiIndex').multiSelect();
 
+                if (_multiSelectTwoRowMode) {
+                    var headerSpanToMove = $(".dienstleistungen-header span.header-right");
+                    var clone = headerSpanToMove.clone();
+                    headerSpanToMove.hide();
+                    $(".ms-container .ms-selection").prepend($("<div></div>").addClass("dienstleistungen-header").addClass("dienstleistungen-selected").html(clone));
+                }
+
                 $('#ms-pre-selected-options-@Model.UiIndex > .ms-selectable > .ms-list > li').each(function () {
-                    $(this).append('<i class="icon-chevron-right"></i>');
+                    if (_multiSelectTwoRowMode) 
+                        $(this).prepend('<span class="dienstleistung-nicht-gewaehlt-checkbox">&nbsp;</span>');
+                    else
+                        $(this).append('<i class="icon-chevron-right"></i>');
                 });
                 $('#ms-pre-selected-options-@Model.UiIndex > .ms-selection > .ms-list > li').each(function () {
                     $(this).prepend('<i class="icon-ok dienstleistung-gewaehlt"></i>');
